# shiny-issue-triage

./: .gitignore  CLAUDE.md  Makefile  README.md  cursors.json  pyproject.toml
.github/aw/: actions-lock.json
.github/triage/: README.md  gh-aw-comparison.md  issue-triage-rubric.md  labels.yaml  team-issue-triage.yaml
.github/workflows/: ci.yml  reprex.yml  steady-state.yml  team-issue-triage-gh-aw.lock.yml  team-issue-triage-gh-aw.md  team-issue-triage.yml  tier2-fix.yml  verify-conventional-commits.yaml
config/: autonomy.yaml  models.yaml  repos.yaml
config/templates/: close-completed.md  close-duplicate-cross-repo.md  close-duplicate.md  close-not-planned.md
decisions/: 2026-06-29-embedding-runtime-fastembed.md  2026-07-01-sonnet-5-for-recheck-dedup.md  2026-07-10-kata-not-engine.md  README.md
duplicates/: candidates.jsonl
issues/: posit-dev-chatlas.jsonl  posit-dev-py-shiny.jsonl  posit-dev-shinychat.jsonl  rstudio-bslib.jsonl  rstudio-shiny.jsonl  rstudio-shinytest2.jsonl
src/triage_hub/: analytics.py  cli.py  config.py  db.py  gh.py  snapshot.py  sync.py  verify.py
src/triage_verse/: __init__.py  analytics.py  analyze.py  autonomy.py  candidates.py  classify.py  cli.py  config.py  dashboard.py  db.py  decisions.py  dedup.py  drawer.py  embed.py  executor.py  gh.py  jsonl_log.py  llm.py  prompts.py  proposals.py  reprex.py  review_queue.py  snapshot.py  spend.py  state.py  steady_state.py  (+5 more)
tests/: test_append_gh_aw_token_usage_summary.mjs  test_dry_run_triage_actions.mjs  test_gh_aw_output_adapter.mjs  test_gh_token_router.mjs  test_persist_gh_aw_triage_state.mjs  test_process_triage_actions.mjs  test_resolve_label_specs.py
triage-results/: 2026-05-14.jsonl  2026-05-21.jsonl  2026-05-28.jsonl  2026-06-04.jsonl  2026-06-11.jsonl  2026-06-22.jsonl  2026-06-25.jsonl  2026-07-02.jsonl  2026-07-09.jsonl  2026-07-16.jsonl  2026-07-23.jsonl
(+110 files in other folders)
