[project]
name = "triage-verse"
version = "0.1.0"
description = "Shinyverse issue triage hub: mirror, analytics, and (later) triage pipeline"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "zstandard>=0.22",
]

[project.scripts]
triage-verse = "triage_verse.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "pyright>=1.1.380"]

[build-system]
requires = ["uv_build>=0.8,<2"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
